# auva-ai-commerce-ops-demo

./: .gitignore  Makefile  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
auva_demo/: __init__.py  ai.py  cli.py  context.py  models.py  routing.py  workflow.py
data/: synthetic_cases.jsonl
docs/: ai_integration.md  architecture.md  ci-cd.md  evaluation.md  github_publish.md  interview_demo.md  public_safety.md
scripts/: evaluate_demo.py  interview_demo.py  run_demo.py
tests/: test_workflow.py
